# lobster_online

./: .env.example  .gitattributes  .gitignore  .impeccable.md  CLIENT_CODE_VERSION.json  README-一键使用.txt  README.md  build_package.sh  client_code_manifest_1.0.7.json  comfly_pricing.json  fix_mcp.bat  install.bat  install_slim.bat  pack_code.sh  pack_code_only.sh  pack_full.sh  pack_full_project.sh  pack_slim.sh  pack_standalone_install.sh  requirements-full.txt  requirements.txt  run_backend.bat  run_mcp.bat  run_mock_comfly.bat  skill_registry.json  start.bat  stop.bat  test_mcp.py  upstream_urls.json  verify_install.bat  youtube_oauth_clients.example.json  一键启动.bat  使用说明-完整包.txt  使用说明-精简包.txt  修复MCP服务未就绪.md  单机版启动脚本_完整包.txt  诊断MCP连接问题.md
backend/: douyin_protocol_runtime.py  run.py
skills/create_ppt/: config.example.yaml  pyproject.toml  requirements.txt
skills/create_ppt/scripts/: create_ppt_pipeline.py
skills/create_ppt/src/ppt_maker/: __init__.py  errors.py  progress.py
skills/create_ppt/src/ppt_maker/ai/: __init__.py  generator.py  prompts.py
skills/create_ppt/src/ppt_maker/cli/: app.py
skills/create_ppt/src/ppt_maker/layout/: __init__.py  cjk.py  engine.py  text_fitter.py
skills/create_ppt/src/ppt_maker/models/: layout.py  presentation.py  style.py
skills/create_ppt/src/ppt_maker/parser/: __init__.py  markdown_parser.py
skills/create_ppt/src/ppt_maker/renderer/: __init__.py  chart.py  image.py  text.py
skills/create_ppt/src/ppt_maker/template/: __init__.py  builtin.py  external.py  layout_map.py
skills/create_ppt/themes/: bluewhite-tech.yaml
(+434 files in other folders)
